Listo los errores y corregido el duplicado de clientes

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,4 +1,11 @@
-NotEmpty.cliente.nombre= El nombre del cliente es requerido.
-NotEmpty.cliente.apellido= El apellido del cliente es requerido.
-NotEmpty.cliente.email= El email del cliente es requerido.
-Email.cliente.email= la direccion de correo no es valida.
+# Mensajes para el campo Nombre
+NotEmpty.cliente.Nombre = El nombre del cliente es obligatorio.
+
+# Mensajes para el campo Apellido
+NotEmpty.cliente.Apellido = El apellido del cliente es obligatorio.
+Size.cliente.Apellido = El apellido del cliente debe tener entre 4 y 15 caracteres.
+
+# Mensajes para el campo Email
+NotEmpty.cliente.Email = El email del cliente es obligatorio.
+Email.cliente.Email = La dirección de correo no es válida.
+
