Listo toda la logica del producto, falta los themplates

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,6 @@
 # Mensajes para el campo Nombre
 NotEmpty.cliente.Nombre = El nombre del cliente es obligatorio.
+NotEmpty.producto.Nombre = El nombre del producto es obligatorio.
 
 # Mensajes para el campo Apellido
 NotEmpty.cliente.Apellido = El apellido del cliente es obligatorio.
@@ -9,3 +10,13 @@ Size.cliente.Apellido = El apellido del cliente debe tener entre 4 y 15 caracter
 NotEmpty.cliente.Email = El email del cliente es obligatorio.
 Email.cliente.Email = La dirección de correo no es válida.
 
+# Mensaje para la descripcion del producto
+NotEmpty.producto.Descripcion = El producto debe contener una descripción
+
+
+NotEmpty.producto.ValorUnitario = El producto es obligatorio tener un valor unitario
+Positive.producto.ValorUnitario = El valor del producto debe ser un numero positivo(mayor a 0)
+
+NotEmpty.producto.Stock = El stock del producto es obligatorio ingresar.
+
+PositiveOrZero.producto.Stock = el valor del Stock debe ser igual o mayor a 0;
