Gestion de Productos terminada

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -14,9 +14,9 @@ Email.cliente.Email = La dirección de correo no es válida.
 NotEmpty.producto.Descripcion = El producto debe contener una descripción
 
 
-NotEmpty.producto.ValorUnitario = El producto es obligatorio tener un valor unitario
+NotNull.producto.ValorUnitario = El producto es obligatorio tener un valor unitario
 Positive.producto.ValorUnitario = El valor del producto debe ser un numero positivo(mayor a 0)
 
-NotEmpty.producto.Stock = El stock del producto es obligatorio ingresar.
+NotNull.producto.Stock = El stock del producto es obligatorio ingresar.
 
 PositiveOrZero.producto.Stock = el valor del Stock debe ser igual o mayor a 0;
