--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -10,6 +10,10 @@ Size.cliente.Apellido = El apellido del cliente debe tener entre 4 y 15 caracter
 NotEmpty.cliente.Email = El email del cliente es obligatorio.
 Email.cliente.Email = La dirección de correo no es válida.
 
+# Mensajes para el campo password
+NotEmpty.cliente.password = la password del cliente es obligatorio.
+
+
 # Mensaje para la descripcion del producto
 NotEmpty.producto.Descripcion = El producto debe contener una descripción
 
