Inicia sesion y registra, pero no implementa securidad

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -11,7 +11,7 @@ NotEmpty.cliente.Email = El email del cliente es obligatorio.
 Email.cliente.Email = La dirección de correo no es válida.
 
 # Mensajes para el campo password
-NotEmpty.cliente.password = la password del cliente es obligatorio.
+NotEmpty.cliente.password = La password del cliente es obligatorio.
 
 
 # Mensaje para la descripcion del producto
@@ -23,4 +23,4 @@ Positive.producto.ValorUnitario = El valor del producto debe ser un numero posit
 
 NotNull.producto.Stock = El stock del producto es obligatorio ingresar.
 
-PositiveOrZero.producto.Stock = el valor del Stock debe ser igual o mayor a 0;
+PositiveOrZero.producto.Stock = El valor del Stock debe ser igual o mayor a 0;
